--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>1.9.0</kotlin.version>
-        <kotlinx-coroutines.version>1.7.2</kotlinx-coroutines.version>
-        <slf4j-api.version>2.0.5</slf4j-api.version>
-        <logback-classic.version>1.4.5</logback-classic.version>
+        <kotlin.version>1.9.22</kotlin.version>
+        <kotlinx-coroutines.version>1.8.0</kotlinx-coroutines.version>
+        <slf4j-api.version>2.0.9</slf4j-api.version>
+        <logback-classic.version>1.4.14</logback-classic.version>
     </properties>
 
     <dependencies>
@@ -67,9 +67,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.12.1</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
